2203/lab5/out
BD Software STL Message Decryptor v3.10 for gcc 2/3/4

Window.h:82:14: error: macro "border" requires 8 arguments, but only 1 given
border();
^
In file included from DebugWindow.h:3,
from testWindow.cc:14

Window.h:99:24: error: macro "border" requires 8 arguments, but only 1 given
virtual void border() {
        ^
Window.h:101:4: error: variable or field ‘border’ declared void
}
^
Window.h:101:4: error: expected ‘;’ at end of member declaration
}
^
;
